Adding action for tagging version

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -33,6 +33,12 @@ jobs:
     - name: Build with Gradle Wrapper
       run: TZ="Europe/London" ./gradlew test
 
+    - name: Version
+      id: version
+      uses: juliansangillo/tag-version@v1
+      with:
+        production-branch: master
+
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
     #
