--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,35 +18,31 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v4
       - name: Set up JDK 21
-        uses: actions/setup-java@v4
+        uses: actions/checkout@v4
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-      # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
-      - uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
       - name: Setup Gradle
-
+        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
       - name: Build with Gradle Wrapper
         run: TZ="Europe/London" ./gradlew build
 
       - name: Build container image
-      - run: docker build -t ${{ secrets.DIGITALOCEAN_REPO_NAME }}/paketliga:latest .
+        run: docker build -t ${{ secrets.DIGITALOCEAN_REPO_NAME }}/paketliga:latest .
 
       - name: Install doctl
-      - uses: digitalocean/action-doctl@v2
+        uses: digitalocean/action-doctl@v2
       - with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
       - name: Log in to DigitalOcean Container Registry with short-lived credentials
-      - run: doctl registry login --expiry-seconds 600
+        run: doctl registry login --expiry-seconds 600
 
       - name: Push image to DigitalOcean Container Registry
-      - run: docker push ${{ secrets.DIGITALOCEAN_REPO_NAME }}/paketliga:latest
+        run: docker push ${{ secrets.DIGITALOCEAN_REPO_NAME }}/paketliga:latest
 
   dependency-submission:
 
