--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,16 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+
+        maven {
+            url "https://snapshots-repo.kordex.dev"
+        }
+        maven {
+            url "https://releases-repo.kordex.dev"
+        }
+    }
+}
 
 rootProject.name = 'paketliga'
 include 'core'
