--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     testImplementation "org.testcontainers:testcontainers:$test_container_version"
     testImplementation "org.testcontainers:postgresql:$test_container_version"
     testImplementation "io.mockk:mockk:$mockk_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.1"
 }
 
 test {
